--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,13 @@ homepage = "https://github.com/pjs902/veldist"
 
 [project.optional-dependencies]
 dev = ["pytest>=7.0"]
+docs = [
+    "sphinx>=7.0",
+    "sphinx-book-theme>=1.0",
+    "myst-parser>=2.0",
+    "sphinx-copybutton",
+    "ipython",
+]
 
 [tool.pytest.ini_options]
 markers = [
