--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ requires-python = ">=3.10"
 keywords = ["astronomy", "kinematics", "bayesian", "velocity", "deconvolution"]
 authors = [{ name = "Peter Smith", email = "pesmith@mpia.de" }]
 license = { file = "LICENSE" }
-dependencies = ["numpy", "numpyro", "jax", "matplotlib"]
+dependencies = ["numpy", "numpyro", "jax", "matplotlib", "scipy"]
 
 [project.urls]
 homepage = "https://github.com/pjs902/veldist"
 
 [project.optional-dependencies]
-dev = ["pytest>=7.0"]
+dev = ["pytest>=7.0", "scipy"]
 docs = [
     "sphinx>=7.0",
     "sphinx-book-theme>=1.0",
